k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twenty-ingress
  labels:
    app: twenty
  annotations:
    kubernetes.io/ingress.global-static-ip-name: twenty-ip
    networking.gke.io/managed-certificates: twenty-ssl-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: crm.4ow4.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: twenty-server
            port:
              number: 80
